@@ -3,68 +3,52 @@ package com.flowmachine.core.diagram;
 import com.flowmachine.core.api.StateMachine;
 import com.flowmachine.core.model.StateMachineInfo;
 import com.flowmachine.core.model.TransitionInfo;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
- * Utility class for generating PlantUML diagrams from StateMachine instances.
- * <p>
- * PlantUML is a powerful tool that renders diagrams from text definitions. The generated diagrams can be viewed online
- * at https://plantuml.com/plantuml/, in VS Code with PlantUML extension, or using local PlantUML installations.
+ * PlantUML diagram generator implementation for StateMachine instances.
  *
+ * @param <TState>   the type of states in the state machine
+ * @param <TEvent>   the type of events in the state machine
+ * @param <TContext> the type of context in the state machine
  * @author FlowMachine
  */
-public class PlantUMLDiagramGenerator {
+public class PlantUMLDiagramGenerator<TState, TEvent, TContext> implements DiagramGenerator<TState, TEvent, TContext> {
 
-  /**
-   * Creates a new instance-based PlantUML diagram generator.
-   *
-   * @param <TState>   the type of states in the state machine
-   * @param <TEvent>   the type of events in the state machine
-   * @param <TContext> the type of context in the state machine
-   * @return a new PlantUMLDiagramGenerator instance
-   */
-  public static <TState, TEvent, TContext> DiagramGenerator<TState, TEvent, TContext> create() {
-    return new PlantUMLDiagramGeneratorImpl<>();
+  private static final Logger logger = LoggerFactory.getLogger(PlantUMLDiagramGenerator.class.getName());
+
+  @Override
+  public String generate(StateMachine<TState, TEvent, TContext> stateMachine) {
+    return generatePlantUMLDiagram(stateMachine, null);
   }
 
-  /**
-   * Instance-based implementation of the DiagramGenerator interface for PlantUML diagrams.
-   */
-  private static class PlantUMLDiagramGeneratorImpl<TState, TEvent, TContext>
-      implements DiagramGenerator<TState, TEvent, TContext> {
+  @Override
+  public String generate(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
+    return generatePlantUMLDiagram(stateMachine, title);
+  }
 
-    @Override
-    public String generate(StateMachine<TState, TEvent, TContext> stateMachine) {
-      return PlantUMLDiagramGenerator.generate(stateMachine, null);
-    }
+  @Override
+  public String generateDetailed(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
+    return generateDetailedPlantUMLDiagram(stateMachine, title);
+  }
 
-    @Override
-    public String generate(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
-      return PlantUMLDiagramGenerator.generate(stateMachine, title);
-    }
+  @Override
+  public String generateForEvent(StateMachine<TState, TEvent, TContext> stateMachine, TEvent focusEvent, String title) {
+    return generatePlantUMLDiagramForEvent(stateMachine, focusEvent, title);
+  }
 
-    @Override
-    public String generateDetailed(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
-      return PlantUMLDiagramGenerator.generateDetailed(stateMachine, title);
-    }
+  @Override
+  public void printToConsole(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
+    printPlantUMLToConsole(stateMachine, title);
+  }
 
-    @Override
-    public String generateForEvent(StateMachine<TState, TEvent, TContext> stateMachine, TEvent focusEvent,
-        String title) {
-      return PlantUMLDiagramGenerator.generateForEvent(stateMachine, focusEvent, title);
-    }
-
-    @Override
-    public void printToConsole(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
-      PlantUMLDiagramGenerator.printToConsole(stateMachine, title);
-    }
-
-    @Override
-    public DiagramFormat getFormatName() {
-      return DiagramFormat.PLANTUML;
-    }
-
+  @Override
+  public DiagramFormat getFormatName() {
+    return DiagramFormat.PLANTUML;
   }
 
   /**
@@ -74,16 +58,14 @@ public class PlantUMLDiagramGenerator {
    * @param title        optional title for the diagram (can be null)
    * @return PlantUML diagram as a string
    */
-  public static <TState, TEvent, TContext> String generate(
-      StateMachine<TState, TEvent, TContext> stateMachine,
-      String title) {
+  private String generatePlantUMLDiagram(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
 
     StringBuilder plantuml = new StringBuilder();
 
     plantuml.append("@startuml\n");
 
     // Add title if provided
-    if (title != null && !title.trim().isEmpty()) {
+    if (Objects.nonNull(title) && !title.trim().isEmpty()) {
       plantuml.append("title ").append(title).append("\n");
     }
 
@@ -159,21 +141,19 @@ public class PlantUMLDiagramGenerator {
    * @param title        optional title for the diagram
    * @return enhanced PlantUML diagram as a string
    */
-  public static <TState, TEvent, TContext> String generateDetailed(
-      StateMachine<TState, TEvent, TContext> stateMachine,
-      String title) {
+  private String generateDetailedPlantUMLDiagram(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
 
     StringBuilder plantuml = new StringBuilder();
     StateMachineInfo<TState, TEvent, TContext> info = stateMachine.getInfo();
 
     // Add title with statistics
-    String enhancedTitle = title != null ? title : "State Machine Diagram";
+    String enhancedTitle = Objects.nonNull(title) ? title : "State Machine Diagram";
     enhancedTitle += String.format("\\n(%d states, %d transitions)",
         info.states().size(),
         info.transitions().size());
 
     // Generate the main diagram
-    String mainDiagram = generate(stateMachine, enhancedTitle);
+    String mainDiagram = generatePlantUMLDiagram(stateMachine, enhancedTitle);
     plantuml.append(mainDiagram);
 
     // Add a note with detailed information
@@ -202,9 +182,7 @@ public class PlantUMLDiagramGenerator {
    * @param title        optional title for the diagram
    * @return filtered PlantUML diagram as a string
    */
-  public static <TState, TEvent, TContext> String generateForEvent(
-      StateMachine<TState, TEvent, TContext> stateMachine,
-      TEvent focusEvent,
+  private String generatePlantUMLDiagramForEvent(StateMachine<TState, TEvent, TContext> stateMachine, TEvent focusEvent,
       String title) {
 
     StringBuilder plantuml = new StringBuilder();
@@ -212,7 +190,7 @@ public class PlantUMLDiagramGenerator {
     plantuml.append("@startuml\n");
 
     // Add title
-    String enhancedTitle = (title != null ? title : "State Machine") +
+    String enhancedTitle = (Objects.nonNull(title) ? title : "State Machine") +
                            "\\nEvent: " + focusEvent;
     plantuml.append("title ").append(enhancedTitle).append("\n");
 
@@ -260,7 +238,7 @@ public class PlantUMLDiagramGenerator {
     // Add only transitions for the focused event
     var filteredTransitions = info.transitions().stream()
         .filter(t -> focusEvent.equals(t.event()))
-        .collect(Collectors.toList());
+        .toList();
 
     for (TransitionInfo<TState, TEvent> transition : filteredTransitions) {
       String fromState = sanitizeStateName(transition.fromState());
@@ -293,29 +271,29 @@ public class PlantUMLDiagramGenerator {
    * @param stateMachine the state machine to visualize
    * @param title        optional title for the diagram
    */
-  public static <TState, TEvent, TContext> void printToConsole(
-      StateMachine<TState, TEvent, TContext> stateMachine,
-      String title) {
+  private void printPlantUMLToConsole(StateMachine<TState, TEvent, TContext> stateMachine, String title) {
+    String diagram = """
+        ╔════════════════════════════════════════════════════════════════╗
+        ║                     PLANTUML FLOW DIAGRAM                      ║
+        ╠════════════════════════════════════════════════════════════════╣
+        ║ Copy the text below and paste it into:                         ║
+        ║ • https://plantuml.com/plantuml/ for online viewing            ║
+        ║ • VS Code with PlantUML extension                              ║
+        ║ • Local PlantUML installation                                  ║
+        ║ • IntelliJ IDEA with PlantUML plugin                           ║
+        ╚════════════════════════════════════════════════════════════════╝
 
-    System.out.println("╔════════════════════════════════════════════════════════════════╗");
-    System.out.println("║                    PLANTUML STATE DIAGRAM                     ║");
-    System.out.println("╠════════════════════════════════════════════════════════════════╣");
-    System.out.println("║ Copy the text below and paste it into:                        ║");
-    System.out.println("║ • https://plantuml.com/plantuml/ for online viewing           ║");
-    System.out.println("║ • VS Code with PlantUML extension                             ║");
-    System.out.println("║ • Local PlantUML installation                                 ║");
-    System.out.println("║ • IntelliJ IDEA with PlantUML plugin                          ║");
-    System.out.println("╚════════════════════════════════════════════════════════════════╝");
-    System.out.println();
-    System.out.println(generate(stateMachine, title));
-    System.out.println();
+        %s
+        """.formatted(generatePlantUMLDiagram(stateMachine, title));
+
+    logger.info(diagram);
   }
 
   /**
    * Sanitizes state names to be valid in PlantUML diagrams. Handles special characters and ensures valid identifiers.
    */
-  private static <TState> String sanitizeStateName(TState state) {
-    if (state == null) {
+  private String sanitizeStateName(TState state) {
+    if (Objects.isNull(state)) {
       return "NULL";
     }
 
@@ -332,8 +310,8 @@ public class PlantUMLDiagramGenerator {
   /**
    * Sanitizes event names to be valid in PlantUML diagrams.
    */
-  private static <TEvent> String sanitizeEventName(TEvent event) {
-    if (event == null) {
+  private String sanitizeEventName(TEvent event) {
+    if (Objects.isNull(event)) {
       return "NULL";
     }
 
